# Child-Testimony-App

./: README.md
.github/workflows/: deploy-pages.yml
backend/: main.py  model_utils.py  pyproject.toml  requirements.txt
backend/previous/: label_mapping.json
child-testimony/: package-lock.json  package.json
child-testimony-backend/: main.py
child-testimony/src/app/: _layout.tsx  index.tsx
child-testimony/src/utils/: api.js
frontend/: .env  app.json  next.config.ts  package-lock.json  package.json
frontend/app/: App.js  globals.css  layout.tsx  page.module.css  page.tsx
frontend/app/prediction/: page.tsx
frontend/src/app/: index.tsx
frontend/src/utils/: api.js
