[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12, <3.13"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.14.1",
    "certifi==2026.6.17",
    "charset-normalizer==3.4.8",
    "click==8.4.2",
    "colorama==0.4.6",
    "fastapi[standard]==0.139.0",
    "filelock==3.29.6",
    "fsspec==2026.6.0",
    "h11==0.16.0",
    "huggingface-hub==0.36.2",
    "idna==3.18",
    "intel-openmp==2021.4.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "mkl==2021.4.0",
    "mpmath==1.3.0",
    "networkx==3.6.1",
    "numpy==2.5.1",
    "packaging==26.2",
    "pandas==3.0.3",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",
    "regex==2026.6.28",
    "requests==2.34.2",
    "safetensors==0.8.0",
    "six==1.17.0",
    "starlette==1.3.1",
    "sympy==1.14.0",
    "tbb==2021.13.1",
    "tokenizers==0.15.2",
    "torch==2.3.1",
    "tqdm==4.68.3",
    "transformers==4.39.3",
    "typing-extensions==4.16.0",
    "typing-inspection==0.4.2",
    "tzdata==2026.2",
    "urllib3==2.7.0",
    "uvicorn==0.50.2",
]
